--- a/package.json
+++ b/package.json
@@ -94,7 +94,12 @@
     "yallist": "^4.0.0"
   },
   "devDependencies": {
-    "cypress": "^10.7.0"
+    "@4tw/cypress-drag-drop": "^2.2.1",
+    "@faker-js/faker": "^7.5.0",
+    "cypress": "^10.7.0",
+    "cypress-image-snapshot": "^4.0.1",
+    "cypress-localstorage-commands": "^2.2.1",
+    "cypress-xpath": "^2.0.1"
   },
   "description": ""
 }
