--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "color-name": "^1.1.4",
     "colorette": "^2.0.19",
     "core-util-is": "^1.0.2",
+    "cypress-real-events": "^1.7.2",
     "dashdash": "^1.14.1",
     "ecc-jsbn": "^0.1.2",
     "emoji-regex": "^8.0.0",
